fix: JPQL 집계 쿼리 결과 처리 시 ClassCastException 수정
- 문제: CourseServiceImpl, CourseReviewServiceImpl에서 JPQL 집계 쿼리(COUNT, AVG) 결과를 Object[]에서 Number로 직접 캐스팅하여 ClassCastException 발생
- 해결: instanceof 패턴 매칭으로 안전하게 타입 체크 후 캐스팅하도록 수정
  - CourseServiceImpl.getCourseDetail()의 리뷰 통계 조회 로직 개선
  - CourseReviewServiceImpl.getReviews(), getReviewStats()의 리뷰 통계 조회 로직 개선
  - 사용자 이름 조회 시 UserNotFoundException 대신 기본값("알 수 없음") 반환
- 테스트 수정: 각 리뷰마다 별도 사용자 생성하여 UniqueConstraint 충족, CourseTime-Course 연결 추가
- 코드 품질 개선: 불필요한 import 제거, Stream.toList() 사용

관련 이슈: #320